@@ -9,7 +9,7 @@ loader_version=0.15.6
 
 
 # Mod Properties
-	mod_version = 1.1.0+1.20.1
+	mod_version = 1.1.0+1.20.1+dev
 	maven_group = me.emafire003.dev
 	archives_base_name = lightwithin
 # Dependencies
