@@ -4,3 +4,5 @@ They go from 0-9 before glitching currently. If a player attempts to use a light
 
 The items crushed by an anvil will have an increased chance of exploding if the anvil is dropped from a height
 
+The player now glows like a glow squid if light charges are stored, and when they meet the max count, they will also produce some light particles
+
